<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    >

     <!-- title -->
    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title_height"
        android:background="@drawable/bg_title"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding"
            android:onClick="btn_back" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_back" >
            </ImageView>
        </LinearLayout>

        <TextView
            style="@style/text_24ffffff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/password_reset" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/view_padding"
            android:visibility="invisible" >

            <TextView
                style="@style/text_15ffffff"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/btn_text"
                android:text="@string/register" />
        </LinearLayout>
    </RelativeLayout>
    
    
      <EditText 
             android:id="@+id/editText_password"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:imeOptions="actionNext"
               android:paddingLeft="10dp"
               android:maxLength="30"
               android:inputType="textPassword"
             android:hint="@string/password"
             />
      
      <EditText 
             android:id="@+id/editText_passwordConfirm"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
               android:paddingLeft="10dp"
               android:imeOptions="actionNext"
               android:maxLength="30"
               android:inputType="textPassword"
             android:hint="@string/password_confirm"
             />
      
      <EditText
            android:id="@+id/editText_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/phone"
             android:imeOptions="actionNext"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:paddingLeft="10dp" />
      
      
      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/verification"
                android:paddingLeft="10dp" />
            
             <RelativeLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center"
               android:layout_marginLeft="5dp"
             android:background="@drawable/btn_scan_press"
             android:layout_weight="2"
             >
            
                  
              <ProgressBar
                  style="?android:attr/progressBarStyleLarge"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="30dip" />
              
              
                  <Button
                android:id="@+id/btn_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_scan"
                android:onClick="btn_verification"
                android:text="@string/verification_get" />
             
         </RelativeLayout>
      


            <TextView
                android:id="@+id/textView_downcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="55S" >
            </TextView>
        </LinearLayout>

        
        
         <RelativeLayout
             android:layout_height="45dp"
             android:layout_width="match_parent"
             android:gravity="center"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:layout_marginTop="10dp"
              android:background="@drawable/btn_scan_press"
             >
            
              <ProgressBar
                  style="?android:attr/progressBarStyleLarge"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="30dip" />
              
                <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/btn_scan"
            android:onClick="btn_forgetPassword"
            
            android:text="@string/confirm"
            android:textColor="#ffffff"
            android:textSize="18sp" >
        </Button>
             
         </RelativeLayout>
      
    
    
    
    
         

</LinearLayout>